Fix Newick parsing and Cosmograph typing in notebook

--- a/TOL Notebook.ipynb
+++ b/TOL Notebook.ipynb
@@ -192,8 +192,7 @@
     "        yield m.group(1) if m.group(1) is not None else m.group(2)\n",
     "\n",
     "def parse_newick(s: str) -> Dict[str, TNode]:\n",
-    "    \"\"\"Parse a single Newick string into a dict of nodes keyed by id.\n",
-    "       FIX: allow unlabeled leaves with branch length (',:0.1' etc.).\"\"\"\n",
+    "    \"\"\"Parse a single Newick string into a dict of nodes keyed by id.\"\"\"\n",
     "    stack: List[str] = []\n",
     "    nodes: Dict[str, TNode] = {}\n",
     "    nid = 0\n",
@@ -226,7 +225,8 @@
     "            parent = stack[-1] if stack else None\n",
     "            u = add_internal(parent)\n",
     "            stack.append(u)\n",
-    "            last = u\n",
+    "            # We have just opened a new clade – no current node for branch lengths yet.\n",
+    "            last = None\n",
     "\n",
     "        elif tok == \",\":\n",
     "            # Next child begins; no current 'last' yet\n",
@@ -241,7 +241,7 @@
     "        elif tok == \":\":\n",
     "            # IMPORTANT FIX:\n",
     "            # If there's a colon but no current node yet (e.g., ',:0.1'),\n",
-    "            # create an implicit unlabeled LEAF under the current parent.\n",
+    "            # create an implicit unlabeled leaf under the current parent.\n",
     "            if last is None:\n",
     "                if not stack:\n",
     "                    raise ValueError(\"[Newick] Branch length at top-level with no node.\")\n",
@@ -257,7 +257,6 @@
     "            if expect_len:\n",
     "                # Previous token was ':' → this must be a numeric length\n",
     "                if last is None:\n",
-    "                    # Should not happen now, but keep defensive\n",
     "                    if not stack:\n",
     "                        raise ValueError(\"[Newick] Branch length without preceding node.\")\n",
     "                    parent = stack[-1]\n",
@@ -331,25 +330,27 @@
     "        raise ValueError(\"[Layout] Root not found.\")\n",
     "\n",
     "    # --- build children lists (already there), compute a deterministic child order for no crossings ---\n",
-    "    # inorder style: sort children by their minimal leaf name (stable)\n",
-    "    def leaf_names(u: str) -> List[str]:\n",
-    "        if not nodes[u].children:\n",
-    "            return [nodes[u].name or u]\n",
-    "        acc: List[str] = []\n",
-    "        for c in nodes[u].children:\n",
-    "            acc += leaf_names(c)\n",
-    "        return acc\n",
+    "    min_label_cache: Dict[str, str] = {}\n",
     "\n",
-    "    # Sort children in-place (by smallest descendant label) to get a stable y ordering\n",
+    "    def min_leaf_label(u: str) -> str:\n",
+    "        if u in min_label_cache:\n",
+    "            return min_label_cache[u]\n",
+    "        node = nodes[u]\n",
+    "        if not node.children:\n",
+    "            label = node.name or node.id\n",
+    "        else:\n",
+    "            label = min(min_leaf_label(c) for c in node.children)\n",
+    "        min_label_cache[u] = label\n",
+    "        return label\n",
+    "\n",
     "    for u, v in nodes.items():\n",
     "        if v.children:\n",
-    "            v.children.sort(key=lambda c: min(leaf_names(c)))\n",
+    "            v.children.sort(key=min_leaf_label)\n",
     "\n",
     "    # --- assign y to leaves in order; y(internal) = mean(child y) ---\n",
     "    y_of: Dict[str, float] = {}\n",
     "    leaves: List[str] = [k for k, v in nodes.items() if not v.children]\n",
     "\n",
-    "    # DFS order over leaves\n",
     "    order: List[str] = []\n",
     "    def dfs_collect(u: str):\n",
     "        ch = nodes[u].children\n",
@@ -395,62 +396,52 @@
     "    def add_link(a: str, b: str):\n",
     "        link_rows.append((a, b))\n",
     "\n",
-    "    # real nodes\n",
     "    for uid, v in nodes.items():\n",
     "        label = v.name if v.name else uid\n",
     "        kind  = \"internal\" if v.children else \"leaf\"\n",
     "        color = COLOR_INTERNAL if v.children else COLOR_LEAF\n",
     "        add_node(uid, x_of[uid], y_of[uid], label, kind, color)\n",
     "\n",
-    "    # edges via bends: parent -> bend_top -> bend_bot -> child\n",
-    "    # ensure stub <= branch length (avoid negative residual for short edges)\n",
     "    for u, v in nodes.items():\n",
     "        if not v.children:\n",
     "            continue\n",
     "        xu, yu = x_of[u], y_of[u]\n",
-    "        # precompute child bends (and vertical connectors)\n",
-    "        bends_for_u: List[Tuple[str, float]] = []  # (bend_bot_id, y)\n",
+    "        bends_for_u: List[Tuple[str, float]] = []\n",
     "\n",
     "        for c in v.children:\n",
     "            blen = max(nodes[c].blen, 0.0)\n",
     "            stub = min(parent_stub, blen - EPS) if blen > EPS else 0.0\n",
     "            xb_top, yb_top = xu + stub, yu\n",
     "            xb_bot, yb_bot = xb_top, y_of[c]\n",
-    "            xc, yc = x_of[c], y_of[c]\n",
     "\n",
-    "            # ids for bend nodes\n",
     "            bend_top_id = f\"{u}__to__{c}__bend_top\"\n",
     "            bend_bot_id = f\"{u}__to__{c}__bend_bot\"\n",
     "\n",
-    "            # create bends (technical nodes)\n",
     "            add_node(bend_top_id, xb_top, yb_top, \"\", \"bend\", COLOR_BEND)\n",
     "            add_node(bend_bot_id, xb_bot, yb_bot, \"\", \"bend\", COLOR_BEND)\n",
     "\n",
-    "            # wire segments\n",
-    "            add_link(u, bend_top_id)         # parent --(stub)--> top bend\n",
-    "            add_link(bend_top_id, bend_bot_id)  # vertical\n",
-    "            add_link(bend_bot_id, c)         # residual horizontal to child\n",
+    "            add_link(u, bend_top_id)\n",
+    "            add_link(bend_top_id, bend_bot_id)\n",
+    "            add_link(bend_bot_id, c)\n",
     "\n",
     "            bends_for_u.append((bend_bot_id, yb_bot))\n",
     "\n",
-    "        # connect adjacent vertical bends with short vertical links to visualize the shared connector\n",
     "        bends_for_u.sort(key=lambda t: t[1])\n",
     "        for (a, _), (b, __) in zip(bends_for_u[:-1], bends_for_u[1:]):\n",
     "            add_link(a, b)\n",
     "\n",
-    "    # unconnected tip markers on a single vertical line to the right\n",
     "    for leaf in leaves:\n",
     "        add_node(f\"{leaf}__tip\", x_tip, y_of[leaf], \"\", \"tip\", COLOR_TIP)\n",
     "\n",
     "    nodes_df = pd.DataFrame(node_rows, columns=[\"id\", \"x\", \"y\", \"label\", \"kind\", \"color\"])\n",
     "    links_df = pd.DataFrame(link_rows, columns=[\"source\", \"target\"])\n",
     "\n",
-    "    # Tidy dtypes (leaner memory footprint)\n",
     "    nodes_df[\"x\"] = nodes_df[\"x\"].astype(\"float32\")\n",
     "    nodes_df[\"y\"] = nodes_df[\"y\"].astype(\"float32\")\n",
     "    for col in (\"id\", \"label\", \"kind\", \"color\"):\n",
-    "        nodes_df[col] = nodes_df[col].astype(\"string\")\n",
-    "    links_df = links_df.astype({\"source\": \"string\", \"target\": \"string\"})\n",
+    "        nodes_df[col] = nodes_df[col].astype(str)\n",
+    "    links_df[\"source\"] = links_df[\"source\"].astype(str)\n",
+    "    links_df[\"target\"] = links_df[\"target\"].astype(str)\n",
     "\n",
     "    log(f\"[Layout] real={sum(nodes_df.kind.isin(['leaf','internal'])):,}, \"\n",
     "        f\"bends={sum(nodes_df.kind == 'bend'):,}, tips={sum(nodes_df.kind == 'tip'):,}, \"\n",
@@ -551,16 +542,16 @@
     "    # points\n",
     "    pts = nodes_df[[\"id\", \"x\", \"y\", \"label\", \"color\"]].copy()\n",
     "    pts = pts.dropna(subset=[\"x\", \"y\"]).reset_index(drop=True)\n",
-    "    pts[\"id\"]    = pts[\"id\"].astype(\"string\")\n",
-    "    pts[\"label\"] = pts[\"label\"].astype(\"string\")\n",
-    "    pts[\"color\"] = pts[\"color\"].astype(\"string\")\n",
-    "    pts[\"x\"]     = pd.to_numeric(pts[\"x\"], errors=\"coerce\").astype(\"float32\")\n",
-    "    pts[\"y\"]     = pd.to_numeric(pts[\"y\"], errors=\"coerce\").astype(\"float32\")\n",
+    "    pts[\"id\"]    = pts[\"id\"].astype(str)\n",
+    "    pts[\"label\"] = pts[\"label\"].fillna(\"\").astype(str)\n",
+    "    pts[\"color\"] = pts[\"color\"].fillna(\"\").astype(str)\n",
+    "    pts[\"x\"]     = pd.to_numeric(pts[\"x\"], errors=\"coerce\").astype(\"float64\")\n",
+    "    pts[\"y\"]     = pd.to_numeric(pts[\"y\"], errors=\"coerce\").astype(\"float64\")\n",
     "\n",
     "    # links\n",
     "    lks = links_df[[\"source\", \"target\"]].copy()\n",
-    "    lks[\"source\"] = lks[\"source\"].astype(\"string\")\n",
-    "    lks[\"target\"] = lks[\"target\"].astype(\"string\")\n",
+    "    lks[\"source\"] = lks[\"source\"].astype(str)\n",
+    "    lks[\"target\"] = lks[\"target\"].astype(str)\n",
     "\n",
     "    # validations\n",
     "    if pts[[\"x\", \"y\"]].isna().any().any():\n",
