Fix Newick layout and widget schema

--- a/TOL Notebook.ipynb
+++ b/TOL Notebook.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# ---------- Input ----------\n",
     "# Set this to your .newick/.nwk/.tre file OR paste a Newick string.\n",
-    "INPUT_PATH = \"/Users/gushchin_a/PyCharmProjects/Gtol/opentree15.1_tree/labelled_supertree/labelled_supertree_ottnames.tre\"  # change if needed\n",
+    "INPUT_PATH = \"(A:0.3,(B:0.1,C:0.2)D:0.4)Root;\"  # change to your file path or Newick string\n",
     "\n",
     "# ---------- Layout controls ----------\n",
     "LEAF_Y_STEP     = 4.0   # constant vertical spacing between leaves (compact but readable)\n",
@@ -226,7 +226,7 @@
     "            parent = stack[-1] if stack else None\n",
     "            u = add_internal(parent)\n",
     "            stack.append(u)\n",
-    "            last = u\n",
+    "            last = None  # expect a child next\n",
     "\n",
     "        elif tok == \",\":\n",
     "            # Next child begins; no current 'last' yet\n",
@@ -332,18 +332,20 @@
     "\n",
     "    # --- build children lists (already there), compute a deterministic child order for no crossings ---\n",
     "    # inorder style: sort children by their minimal leaf name (stable)\n",
-    "    def leaf_names(u: str) -> List[str]:\n",
+    "    from functools import lru_cache\n",
+    "\n",
+    "    @lru_cache(None)\n",
+    "    def smallest_leaf_label(u: str) -> str:\n",
     "        if not nodes[u].children:\n",
-    "            return [nodes[u].name or u]\n",
-    "        acc: List[str] = []\n",
-    "        for c in nodes[u].children:\n",
-    "            acc += leaf_names(c)\n",
-    "        return acc\n",
+    "            return nodes[u].name or u\n",
+    "        return min(smallest_leaf_label(c) for c in nodes[u].children)\n",
     "\n",
     "    # Sort children in-place (by smallest descendant label) to get a stable y ordering\n",
     "    for u, v in nodes.items():\n",
     "        if v.children:\n",
-    "            v.children.sort(key=lambda c: min(leaf_names(c)))\n",
+    "            v.children.sort(key=lambda c: smallest_leaf_label(c))\n",
+    "\n",
+    "    log(f\"[Layout] root={root}, ordering children ...\")\n",
     "\n",
     "    # --- assign y to leaves in order; y(internal) = mean(child y) ---\n",
     "    y_of: Dict[str, float] = {}\n",
@@ -362,6 +364,7 @@
     "\n",
     "    for i, leaf in enumerate(order):\n",
     "        y_of[leaf] = i * leaf_step\n",
+    "    log(f\"[Layout] assigned Y to {len(order)} leaves with step={leaf_step}\")\n",
     "\n",
     "    def set_internal_y(u: str) -> float:\n",
     "        ch = nodes[u].children\n",
@@ -371,6 +374,7 @@
     "        y_of[u] = float(np.mean(ys))\n",
     "        return y_of[u]\n",
     "    set_internal_y(root)\n",
+    "    log(\"[Layout] internal node Y positions propagated.\")\n",
     "\n",
     "    # --- compute x = cumulative branch length from root (weights preserved) ---\n",
     "    x_of: Dict[str, float] = {root: 0.0}\n",
@@ -380,6 +384,7 @@
     "        for c in nodes[u].children:\n",
     "            x_of[c] = x_of[u] + max(nodes[c].blen, 0.0)\n",
     "            stack.append(c)\n",
+    "    log(\"[Layout] X coordinates assigned using branch lengths.\")\n",
     "\n",
     "    # --- aligned tip x (unconnected markers) ---\n",
     "    max_leaf_x = max((x_of[l] for l in leaves), default=0.0)\n",
@@ -441,6 +446,7 @@
     "    # unconnected tip markers on a single vertical line to the right\n",
     "    for leaf in leaves:\n",
     "        add_node(f\"{leaf}__tip\", x_tip, y_of[leaf], \"\", \"tip\", COLOR_TIP)\n",
+    "    log(f\"[Layout] placed {len(leaves)} tip markers at x={x_tip:.3f}.\")\n",
     "\n",
     "    nodes_df = pd.DataFrame(node_rows, columns=[\"id\", \"x\", \"y\", \"label\", \"kind\", \"color\"])\n",
     "    links_df = pd.DataFrame(link_rows, columns=[\"source\", \"target\"])\n",
@@ -449,8 +455,9 @@
     "    nodes_df[\"x\"] = nodes_df[\"x\"].astype(\"float32\")\n",
     "    nodes_df[\"y\"] = nodes_df[\"y\"].astype(\"float32\")\n",
     "    for col in (\"id\", \"label\", \"kind\", \"color\"):\n",
-    "        nodes_df[col] = nodes_df[col].astype(\"string\")\n",
-    "    links_df = links_df.astype({\"source\": \"string\", \"target\": \"string\"})\n",
+    "        nodes_df[col] = nodes_df[col].astype(str)\n",
+    "    links_df[\"source\"] = links_df[\"source\"].astype(str)\n",
+    "    links_df[\"target\"] = links_df[\"target\"].astype(str)\n",
     "\n",
     "    log(f\"[Layout] real={sum(nodes_df.kind.isin(['leaf','internal'])):,}, \"\n",
     "        f\"bends={sum(nodes_df.kind == 'bend'):,}, tips={sum(nodes_df.kind == 'tip'):,}, \"\n",
@@ -551,16 +558,16 @@
     "    # points\n",
     "    pts = nodes_df[[\"id\", \"x\", \"y\", \"label\", \"color\"]].copy()\n",
     "    pts = pts.dropna(subset=[\"x\", \"y\"]).reset_index(drop=True)\n",
-    "    pts[\"id\"]    = pts[\"id\"].astype(\"string\")\n",
-    "    pts[\"label\"] = pts[\"label\"].astype(\"string\")\n",
-    "    pts[\"color\"] = pts[\"color\"].astype(\"string\")\n",
+    "    pts[\"id\"]    = pts[\"id\"].astype(str)\n",
+    "    pts[\"label\"] = pts[\"label\"].astype(str)\n",
+    "    pts[\"color\"] = pts[\"color\"].astype(str)\n",
     "    pts[\"x\"]     = pd.to_numeric(pts[\"x\"], errors=\"coerce\").astype(\"float32\")\n",
     "    pts[\"y\"]     = pd.to_numeric(pts[\"y\"], errors=\"coerce\").astype(\"float32\")\n",
     "\n",
     "    # links\n",
     "    lks = links_df[[\"source\", \"target\"]].copy()\n",
-    "    lks[\"source\"] = lks[\"source\"].astype(\"string\")\n",
-    "    lks[\"target\"] = lks[\"target\"].astype(\"string\")\n",
+    "    lks[\"source\"] = lks[\"source\"].astype(str)\n",
+    "    lks[\"target\"] = lks[\"target\"].astype(str)\n",
     "\n",
     "    # validations\n",
     "    if pts[[\"x\", \"y\"]].isna().any().any():\n",
