--- a/TOL.ipynb
+++ b/TOL.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb3aa4be",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6f4769bd",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c44d1d81",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "50902638",
    "metadata": {},
    "outputs": [],
@@ -283,12 +283,12 @@
     "    root = _find_root(nodes)\n",
     "    _sort_children_for_no_crossing(nodes)\n",
     "    leaves = _collect_leaves(nodes, root)\n",
-    "    y: Dict[str, float] = {lf: i * leaf_step for i, lf in enumerate(leaves)}\n",
+    "    y: Dict[str, float] = {lf: i * leaf_step for i, lf in enumerate[str](leaves)}\n",
     "\n",
     "    # Postorder to compute parent means\n",
     "    order: List[str] = []\n",
     "    stack: List[str] = [root]\n",
-    "    visited: Set[str] = set()\n",
+    "    visited: Set[str] = set[str]()\n",
     "    while stack:\n",
     "        u = stack.pop()\n",
     "        order.append(u)\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "8c9fe020",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
     "    node_id_actual: Dict[str, int] = {}\n",
     "    next_id = 0\n",
     "    point_cache: Dict[Tuple[str, float, float], int] = {}\n",
-    "    link_cache: Set[Tuple[int, int]] = set()\n",
+    "    link_cache: Set[Tuple[int, int]] = set[Tuple[int, int]]()\n",
     "\n",
     "    def add_point(kind: str, x: float, yv: float, *, label: str = \"\", color: Optional[str] = None,\n",
     "                  size: Optional[float] = None, cache_bend: bool = True) -> int:\n",
@@ -445,7 +445,7 @@
     "        node_x_display = q(ex - float(PARENT_STUB_PX))\n",
     "        pid = add_point(kind, node_x_display, y[u], label=label, cache_bend=False)\n",
     "        node_id_actual[u] = pid\n",
-    "    id_to_idx = {row[\"id\"]: i for i, row in enumerate(pts)}\n",
+    "    id_to_idx = {row[\"id\"]: i for i, row in enumerate[Dict[str, Any]](pts)}\n",
     "\n",
     "    # 4) orthogonal edges; move children to final weighted X\n",
     "    EPS = 1e-6\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "5d329b43",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "1978e10a",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2f349e8bc6c40718e260e243a86292a",
+       "model_id": "bb032fa5a80e47b5a72965b36cea2515",
        "version_major": 2,
        "version_minor": 1
       },
@@ -662,9 +662,9 @@
     "    return w, nodes_df, links_df\n",
     "\n",
     "\n",
-    "# Local path and parameters (edit here)\n",
+    "# Local path and parameters\n",
     "NEWICK: str = \"/Users/gushchin_a/Downloads/Chond 10Cal 10k TreeSet.tre\"\n",
-    "params = dict(\n",
+    "params = dict[str, float](\n",
     "    x_scale=140.0,\n",
     "    min_level_gap=56.0,\n",
     "    leaf_step=400.0,\n",
